Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23058

Examples not registered on QtCreator 4.11.0 beta1

XMLWordPrintable

    • 331358752c074d4dccadc5bd353bb81ed7fb1bdc (qt-creator/qt-creator/4.11)

      Install Qt514.0 android (any architecture) binaries and select preview creator, finish installation,

      Launch the preview Creator and see the 'Examples' page, no examples visible.

      Close preview Creator and launch the released one, see the 'Examples' page, examples are visible in the page.

      Tested on Windows and linux.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes